# Sand-pile-simulation

./: CMakeLists.txt  README.md
lib/converting_to_bmp/: BMP.cpp  BMP.h  CMakeLists.txt
lib/sandpile/: CMakeLists.txt  sandpile.cpp  sandpile.h
